added a warning for people using Internet Explorer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div id="left" class="column side_nav_bar"></div>
 </div>
 <div id="footer"></div>
+<script src="ie_warning.js"></script>
 <script src="out.js"></script>
 </body>
 </html>
