--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 <head>
+<meta charset="utf-8"/>
+<title>Tom Alexander's Portfolio</title>
+<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-<link rel="stylesheet" href="style.css">
-<title>Tom Alexander's Portfolio</title>
 <div id="header" class="titlebar"></div>
 <div id="container">
   <div id="center" class="column"><div id="padded_center" style="padding-left:10px; padding-right:10px;"></div></div>
